@@ -1,3 +1,12 @@
+Thu Jan  6 08:24:39 2005  Carlos O'Ryan  <coryan@atdesk.com>
+
+	* orbsvcs/orbsvcs/ESF/ESF_Proxy_List.h:
+	* orbsvcs/orbsvcs/ESF/ESF_Proxy_List.i:
+	  Use ACE_Unbounded_Set instead of ACE_Unbounded_Set_Ex.  The
+	  latter is not thread-safe, and the bugs attributed to the former
+	  (see http://deuce.doc.wustl.edu/bugzilla/show_bug.cgi?id=1465)
+	  are actually a user-configuration mistake.
+
 Thu Jan  6 12:02:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/RTCORBA/Network_Priority_Mapping_Manager.h:
